--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@gtm-support/vue-gtm": "^3.1.0",
     "@unhead/vue": "^2.0.10",
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.3.0",
